chore: cucr migration

--- a/ros-pedsim_ros/install.yaml
+++ b/ros-pedsim_ros/install.yaml
@@ -2,9 +2,9 @@
   noetic:
     source:
       type: git
-      url: git@github.com:sasilva1998/pedsim_ros.git
+      url: git@github.com:CardiffUniversityComputationalRobotics1998/pedsim_ros.git
       version: noetic-devel
   default:
     source:
       type: git
-      url: git@github.com:sasilva1998/pedsim_ros.git
+      url: git@github.com:CardiffUniversityComputationalRobotics1998/pedsim_ros.git
