--- a/ros-esc_move_base_control/install.yaml
+++ b/ros-esc_move_base_control/install.yaml
@@ -2,11 +2,11 @@
   noetic:
     source:
       type: git
-      url: git@github.com:CardiffUniversityComputationalRobotics/social-rrt-demo.git
+      url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
       version: noetic-devel
-      sub-dir: pepper_move_base/pepper_move_base_control
+      sub-dir: esc_move_base_control
   default:
     source:
       type: git
-      url: git@github.com:CardiffUniversityComputationalRobotics/social-rrt-demo.git
-      sub-dir: pepper_move_base/pepper_move_base_control
+      url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
+      sub-dir: esc_move_base_control
