--- a/ros-xsens_driver/install.yaml
+++ b/ros-xsens_driver/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
-    type: system
-    name: xsens-driver
+    type: git
+    url: https://github.com/ethz-asl/ethzasl_xsens_driver.git
