--- a/ros-log4cpp/install.yaml
+++ b/ros-log4cpp/install.yaml
@@ -1,9 +1,9 @@
 - type: ros
+  #default:
+    #source:
+      #type: system
+      #name: log4cpp
   default:
-    source:
-      type: system
-      name: log4cpp
-  melodic:
     source:
       type: git
       url: https://github.com/orocos-toolchain/log4cpp.git
