--- a/ros-rtt/install.yaml
+++ b/ros-rtt/install.yaml
@@ -1,9 +1,9 @@
 - type: ros
+  #default:
+    #source:
+      #type: system
+      #name: rtt
   default:
-    source:
-      type: system
-      name: rtt
-  melodic:
     source:
       type: git
       url: https://github.com/orocos-toolchain/rtt.git
