--- a/ros-smf_move_base_mapping/install.yaml
+++ b/ros-smf_move_base_mapping/install.yaml
@@ -1,5 +1,12 @@
 - type: ros
-  source:
-    type: git
-    url: git@github.com:CardiffUniversityComputationalRobotics/social-multi-fed-nav-stack.git
-    sub-dir: smf_move_base_mapping
+  melodic:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/social-multi-fed-nav-stack.git
+      sub-dir: smf_move_base_mapping
+      version: melodic-devel
+  default:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/social-multi-fed-nav-stack.git
+      sub-dir: smf_move_base_mapping
