--- a/ros-amigo_msgs/install.yaml
+++ b/ros-amigo_msgs/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/amigo_msgs.git
+    url: git@github.com:tue-robotics/amigo_msgs.git
