--- a/ros-carrot_planner/install.yaml
+++ b/ros-carrot_planner/install.yaml
@@ -1,6 +1,12 @@
 - type: ros
-  source:
-    type: git
-    url: git@github.com:cucr-robotics/navigation.git
-    sub-dir: carrot_planner
-    version: melodic-devel
+  melodic:
+    source:
+      type: git
+      url: git@github.com:tue-robotics/navigation.git
+      sub-dir: carrot_planner
+      version: melodic-devel
+  default:
+    source:
+      type: git
+      url: git@github.com:tue-robotics/navigation.git
+      sub-dir: carrot_planner
