--- a/ros-ed_robocup/install.yaml
+++ b/ros-ed_robocup/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/ed_robocup.git
+    url: git@github.com:tue-robotics/ed_robocup.git
     sub-dir: ed_robocup
