chore: correct tue user

--- a/ros-wire_tutorials/install.yaml
+++ b/ros-wire_tutorials/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/wire.git
+    url: git@github.com:tue-robotics/wire.git
     sub-dir: wire_tutorials
