chore: correct tue user

--- a/ros-hmi/install.yaml
+++ b/ros-hmi/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/hmi.git
+    url: git@github.com:tue-robotics/hmi.git
     sub-dir: hmi
