--- a/ros-head_ref_msgs/install.yaml
+++ b/ros-head_ref_msgs/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/head_ref.git
+    url: git@github.com:tue-robotics/head_ref.git
     sub-dir: head_ref_msgs
