--- a/ros-hero_msgs/install.yaml
+++ b/ros-hero_msgs/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/hero_msgs.git
+    url: git@github.com:tue-robotics/hero_msgs.git
