chore: correct tue user

--- a/ros-move_slow_and_clear/install.yaml
+++ b/ros-move_slow_and_clear/install.yaml
@@ -1,6 +1,13 @@
 - type: ros
-  source:
-    type: git
-    url: git@github.com:cucr-robotics/navigation.git
-    sub-dir: move_slow_and_clear
-    version: melodic-devel
+  melodic:
+    source:
+      type: git
+      url: git@github.com:tue-robotics/navigation.git
+      sub-dir: move_slow_and_clear
+      version: melodic-devel
+  default:
+    source:
+      type: git
+      url: git@github.com:tue-robotics/navigation.git
+      sub-dir: move_slow_and_clear
+      version: noetic-devel
