--- a/ros-node_alive/install.yaml
+++ b/ros-node_alive/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/node_alive.git
+    url: git@github.com:tue-robotics/node_alive.git
