--- a/ros-r5cop_demo/install.yaml
+++ b/ros-r5cop_demo/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/r5cop_demo.git
+    url: git@github.com:tue-robotics/r5cop_demo.git
