--- a/ros-robot_pose_ekf/install.yaml
+++ b/ros-robot_pose_ekf/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:cucr-robotics/navigation.git
-    sub-dir: robot_pose_ekf
-    version: melodic-devel
+    type: system
+    name: robot_pose_ekf
