--- a/ros-smach/install.yaml
+++ b/ros-smach/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:cucr-robotics/executive_smach.git
-    sub-dir: smach
-
+    type: system
+    name: smach
