--- a/ros-smach_ros/install.yaml
+++ b/ros-smach_ros/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:cucr-robotics/executive_smach.git
-    sub-dir: smach_ros
+    type: system
+    name: smach_ros
