--- a/ros-tf_server/install.yaml
+++ b/ros-tf_server/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/tf_server.git
+    url: git@github.com:tue-robotics/tf_server.git
