--- a/ros-tue_config/install.yaml
+++ b/ros-tue_config/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/cucr_config.git
+    url: git@github.com:tue-robotics/tue_config.git
