--- a/ros-tue_msgs/install.yaml
+++ b/ros-tue_msgs/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cucr-robotics/cucr_msgs.git
+    url: git@github.com:tue-robotics/tue_msgs.git
