--- a/ros-esc_move_base_msgs/install.yaml
+++ b/ros-esc_move_base_msgs/install.yaml
@@ -5,6 +5,12 @@
       url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
       version: noetic-devel
       sub-dir: esc_move_base_msgs
+  melodic:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
+      version: melodic-devel
+      sub-dir: esc_move_base_msgs
   default:
     source:
       type: git
