--- a/ros-pepper_social_nav_tests/install.yaml
+++ b/ros-pepper_social_nav_tests/install.yaml
@@ -5,6 +5,12 @@
       url: git@github.com:CardiffUniversityComputationalRobotics/social-robot-nav-tests.git
       sub-dir: pepper_social_nav_tests
       version: noetic-devel
+  melodic:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/social-robot-nav-tests.git
+      sub-dir: pepper_social_nav_tests
+      version: melodic-devel
   default:
     source:
       type: git
