--- a/ros-gazebo_ros_link_attacher/install.yaml
+++ b/ros-gazebo_ros_link_attacher/install.yaml
@@ -2,4 +2,4 @@
   source:
       type: git
       url: git@github.com:pal-robotics/gazebo_ros_link_attacher.git
-      version: gazebo9
+      version: melodic-devel
