[tue-documentation-github] add ros-picovoice_msgs

--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -173,6 +173,8 @@
 - type: target
   name: ros-people_recognition_msgs
 - type: target
+  name: ros-picovoice_msgs
+- type: target
   name: ros-problib
 - type: target
   name: ros-problib_msgs
