--- a/ros-yolov7_ros/install.yaml
+++ b/ros-yolov7_ros/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/lukazso/yolov7-ros.git
+    url: https://github.com/tue-robotics/yolov7_ros.git
