--- a/ros-franka_gripper/install.yaml
+++ b/ros-franka_gripper/install.yaml
@@ -1,6 +1,6 @@
 - type: ros
   source:
       type: git
-      url: git@github.com:frankaemika/franka_ros.git
+      url: git@github.com:CardiffUniversityComputationalRobotics/franka_ros.git
       sub-dir: franka_gripper
       version: noetic-devel
