--- a/pycharm/pycharm-community_pycharm-community.desktop
+++ b/pycharm/pycharm-community_pycharm-community.desktop
@@ -9,3 +9,4 @@ Comment=Python IDE for Professional Developers
 Categories=Development;IDE;
 Terminal=false
 StartupWMClass=jetbrains-pycharm-ce
+StartupNotify=true
