--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -69,6 +69,10 @@
 - type: target
   name: ros-dragonfly_speech_recognition
 - type: target
+  name: ros-depthimage_to_navscan
+- type: target
+  name: ros-depthimage_to_navscan_rgbd
+- type: target
   name: ros-dwa_local_planner
 - type: target
   name: ros-ed
