[tue-middleware] add depthimage_to_navscan_rgbd (#336)
* [tue-middleware] add depthimage_to_navscan_rgbd

* Update install.yaml

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -15,6 +15,9 @@
 - type: target
   name: ros-dwa_local_planner
 
+- type: target
+  name: ros-depthimage_to_navscan_rgbd
+
 # SLAM
 - type: target
   name: ros-gmapping
