[tue-documentation-github] add dep on rgbd_image_buffer

--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -189,6 +189,8 @@
 - type: target
   name: ros-rgbd
 - type: target
+  name: ros-rgbd_image_buffer
+- type: target
   name: ros-rgbd_msgs
 - type: target
   name: ros-robocup_knowledge
