fix: tue-robocup-at-home has been replaced by ros-tue_robocup

--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -25,7 +25,7 @@
 # -------------------- ROBOCUP --------------------
 
 - type: target
-  name: tue-robocup-at-home
+  name: ros-tue_robocup
 - type: target
   name: ros-amigo_skills
 - type: target
