--- a/hero-dev/install.yaml
+++ b/hero-dev/install.yaml
@@ -23,7 +23,7 @@
 # -------------------- ROBOCUP --------------------
 
 - type: target
-  name: tue-robocup-at-home
+  name: ros-tue_robocup
 - type: target
   name: ros-hero_skills
 
