[RobotWebTools] migrate to released version

--- a/ros-rosbridge_server/install.yaml
+++ b/ros-rosbridge_server/install.yaml
@@ -1,6 +1,15 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/RobotWebTools/rosbridge_suite.git
-    sub-dir: rosbridge_server
-    version: ros1
+    type: system
+    name: rosbridge-server
+
+# temp; start
+# should be removed not later then 2023-04-13
+# this is to force removal of source version of the following packages
+- type: target
+  name: ros-rosapi
+- type: target
+  name: ros-rosbridge_library
+- type: target
+  name: ros-rosbridge_msgs
+# temp; end
