--- a/ros-rosapi/install.yaml
+++ b/ros-rosapi/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/RobotWebTools/rosbridge_suite.git
-    sub-dir: rosapi
-    version: ros1
+    type: system
+    name: rosapi
