--- a/ros-rosbridge_suite/install.yaml
+++ b/ros-rosbridge_suite/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/RobotWebTools/rosbridge_suite.git
-    sub-dir: rosbridge_suite
-    version: ros1
+    type: system
+    name: rosbridge-suite
