--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -117,6 +117,10 @@
 - type: target
   name: ros-ed_wire
 - type: target
+  name: ros-emc_simulator
+- type: target
+  name: ros-emc_system
+- type: target
   name: ros-geolib2
 - type: target
   name: ros-global_planner
