[matthijs] add hero electron dev apps

--- a/matthijs/install.yaml
+++ b/matthijs/install.yaml
@@ -35,10 +35,15 @@
 - type: target
   name: telegram-desktop
 
+# Hero Electron apps
+- type: target
+  name: hero-dashboard-dev
+- type: target
+  name: hero-display-dev
+
 # Styling
 - type: system
   name: gnome-tweak-tool
-
 
 # swri
 - type: target
