[split-tue_robocup] export ros functions

--- a/split-tue_robocup/install.yaml
+++ b/split-tue_robocup/install.yaml
@@ -1,3 +1,6 @@
 - type: git
   url: https://github.com/tue-robotics/git-split-branch.git
   path: ~/src/git-split-branch
+
+- type: target
+  name: ros1
