feat: om hw deps

--- a/ros-open_manipulator_description/install.yaml
+++ b/ros-open_manipulator_description/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: git@github.com:CardiffUniversityComputationalRobotics/open_manipulator.git
     sub-dir: open_manipulator_description
+    version: noetic-devel
