returning to system packages for franka

--- a/ros-franka_control/install.yaml
+++ b/ros-franka_control/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-      type: git
-      url: git@github.com:CardiffUniversityComputationalRobotics/franka_ros.git
-      sub-dir: franka_control
-      version: noetic-devel
+    type: system
+    name: franka-control
