--- a/ros-panda_moveit_config/install.yaml
+++ b/ros-panda_moveit_config/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-      type: git
-      url: git@github.com:CardiffUniversityComputationalRobotics/panda_moveit_config.git
-      version: noetic-devel
+    type: system
+    name: panda-moveit-config
