--- a/ros-rviz/install.yaml
+++ b/ros-rviz/install.yaml
@@ -1,4 +1,7 @@
 - type: ros
-  source:
-    type: system
-    name: rviz
+  default:
+    source: null
+  noetic:
+    source:
+      type: system
+      name: rviz
