--- a/colcon/install.yaml
+++ b/colcon/install.yaml
@@ -5,7 +5,10 @@
   name: python3-colcon-common-extensions
 
 - type: system
-  name: python3-colcon-clean
+  default:
+    name: python3-colcon-clean
+  focal:
+    name: null
 
 - type: system
   name: python3-colcon-mixin
