--- a/matthijs/install.yaml
+++ b/matthijs/install.yaml
@@ -17,7 +17,10 @@
   name: vim
 
 - type: system
-  name: btop
+  default:
+    name: btop
+  focal:
+    name: null
 - type: system
   name: geany
 - type: system
