[ros-builtin_interfaces] noetic: null

--- a/ros-builtin_interfaces/install.yaml
+++ b/ros-builtin_interfaces/install.yaml
@@ -1,4 +1,7 @@
 - type: ros
-  source:
-    type: system
-    name: builtin-interfaces
+  default:
+    source:
+      type: system
+      name: builtin-interfaces
+  noetic:
+    source: null
