--- a/ros-kdl_conversions/install.yaml
+++ b/ros-kdl_conversions/install.yaml
@@ -1,4 +1,7 @@
 - type: ros
-  source:
-    type: system
-    name: kdl-conversions
+  default:
+    source: null
+  noetic:
+    source:
+      type: system
+      name: kdl-conversions
