(actions) fix line length

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,10 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_DEPLOY_KEY }}
       - name: ShellCheck
-        run: find . -type f \( -iname "setup" -o -iname "*.bash" -o -iname "*.sh" \) -print0 | xargs -0  -r -n1 shellcheck
+        run:
+          - |
+              find . -type f \( -iname "setup" -o -iname "*.bash" -o -iname "*.sh" \) -print0
+              | xargs -0  -r -n1 shellcheck
   bash_set_error:
     name: Set -e/+e Check
     runs-on: ubuntu-latest
