--- a/ros-swri_console/install.yaml
+++ b/ros-swri_console/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: swri-console
+  default:
+    source:
+      type: system
+      name: swri-console
+  rolling:
+    source:
+      type: git
+      url: https://github.com/swri-robotics/swri_console.git
+      version: ros2-devel
