[clion] fix desktop file

--- a/clion/clion_clion.desktop
+++ b/clion/clion_clion.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Type=Application
 Name=CLion
 Icon=/snap/clion/current/bin/clion.png
-Exec=env BAMF_DESKTOP_FILE_HINT=~/.local/applications/clion_clion.desktop -c "shopt -s expand_aliases && source ~/.tue/setup.bash && clion %f
+Exec=env BAMF_DESKTOP_FILE_HINT=~/.local/applications/clion_clion.desktop bash -c "shopt -s expand_aliases && source ~/.tue/setup.bash && clion %F"
 Comment=A cross-platform IDE for C and C++
 Categories=Development;IDE;
 Terminal=false
