[ros-trac_ik*] add ros2

--- a/ros-trac_ik_kinematics_plugin/install.yaml
+++ b/ros-trac_ik_kinematics_plugin/install.yaml
@@ -1,5 +1,12 @@
 - type: ros
-  source:
-    type: git
-    url: https://bitbucket.org/traclabs/trac_ik.git
-    sub-dir: trac_ik_kinematics_plugin
+  default:
+    source:
+      type: git
+      url: https://bitbucket.org/traclabs/trac_ik.git
+      sub-dir: trac_ik_kinematics_plugin
+      version: rolling-devel
+  noetic:
+    source:
+      type: git
+      url: https://bitbucket.org/traclabs/trac_ik.git
+      sub-dir: trac_ik_kinematics_plugin
