--- a/ros-trac_ik_lib/install.yaml
+++ b/ros-trac_ik_lib/install.yaml
@@ -1,5 +1,12 @@
 - type: ros
-  source:
-    type: git
-    url: https://bitbucket.org/traclabs/trac_ik.git
-    sub-dir: trac_ik_lib
+  default
+    source:
+      type: git
+      url: https://bitbucket.org/traclabs/trac_ik.git
+      sub-dir: trac_ik_lib
+      version: rolling-devel
+  noetic
+    source:
+      type: git
+      url: https://bitbucket.org/traclabs/trac_ik.git
+      sub-dir: trac_ik_lib
