--- a/ros-trac_ik_lib/install.yaml
+++ b/ros-trac_ik_lib/install.yaml
@@ -1,11 +1,11 @@
 - type: ros
-  default
+  default:
     source:
       type: git
       url: https://bitbucket.org/traclabs/trac_ik.git
       sub-dir: trac_ik_lib
       version: rolling-devel
-  noetic
+  noetic:
     source:
       type: git
       url: https://bitbucket.org/traclabs/trac_ik.git
