[Add]: new packages needed for Stretch2 simulation

--- a/ros-stretch_description/install.yaml
+++ b/ros-stretch_description/install.yaml
@@ -3,4 +3,4 @@
       type: git
       url: git@github.com:hello-robot/stretch_ros.git
       sub-dir: stretch_description
-      version: master
+      version: noetic
