--- a/ros-test_stretch2_hardware_bringup/install.yaml
+++ b/ros-test_stretch2_hardware_bringup/install.yaml
@@ -3,3 +3,4 @@
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_robots_tests.git
       sub-dir: tests_stretch2/test_stretch2_hardware_bringup
+      version: stretch2_dev
