--- a/ros-stretch_moveit_config/install.yaml
+++ b/ros-stretch_moveit_config/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:cpaxton/stretch_ros.git
+    url: git@github.com:hello-robot/stretch_ros.git
     sub-dir: stretch_moveit_config
+    version: autodock/aruco
