--- a/ros-people_tracking/install.yaml
+++ b/ros-people_tracking/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/people_recognition.git
     sub-dir: people_tracking
+    version: feature/people_tracking
