--- a/qtcreator/shortcut/org.qt-project.qtcreator.desktop
+++ b/qtcreator/shortcut/org.qt-project.qtcreator.desktop
@@ -3,10 +3,10 @@
 Type=Application
 Exec=bash -c "shopt -s expand_aliases && source ~/.tue/setup.bash && qtcreator %F"
 Name=Qt Creator
-GenericName=C++ IDE for developing Qt applications
+GenericName=The IDE of choice for Qt development.
 X-KDE-StartupNotify=true
 Icon=QtProject-qtcreator
 StartupWMClass=qtcreator
 Terminal=false
 Categories=Development;IDE;Qt;
-MimeType= text/x-c++src;text/x-c++hdr;text/x-xsrc;application/x-designer;application/vnd.qt.qmakeprofile;application/vnd.qt.xml.resource;
+MimeType=text/x-c++src;text/x-c++hdr;text/x-xsrc;application/x-designer;application/vnd.qt.qmakeprofile;application/vnd.qt.xml.resource;text/x-qml;text/x-qt.qml;text/x-qt.qbs;
