[matthijs] add solaar

--- a/matthijs/install.yaml
+++ b/matthijs/install.yaml
@@ -12,6 +12,8 @@
 - type: target
   name: pycharm-professional
 - type: target
+  name: solaar
+- type: target
   name: terminator
 - type: target
   name: vim
