[tue-documentation-github] add dep on ros-image_recognition_pose_estimation

--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -161,6 +161,8 @@
 - type: target
   name: ros-image_recognition_openpose
 - type: target
+  name: ros-image_recognition_pose_estimation
+- type: target
   name: ros-image_recognition_rqt
 - type: target
   name: ros-image_recognition_skybiometry
