--- a/hero-demo-laptop/shortcuts/hero-rviz.desktop
+++ b/hero-demo-laptop/shortcuts/hero-rviz.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Exec=bash -c "shopt -s expand_aliases && source ~/.tue/setup.bash; cp -f $TUE_SYSTEM_DIR/src/hero_bringup/parameters/tools/rviz_config.rviz /tmp/rviz_config.rviz; hero-rviz; cp -f /tmp/rviz_config.rviz $TUE_SYSTEM_DIR/src/hero_bringup/parameters/tools/rviz_config.rviz"
+Exec=bash -c "shopt -s expand_aliases && source ~/.tue/setup.bash; cp -f ${TUE_ENV_WS_DIR}/src/hero_bringup/parameters/tools/rviz_config.rviz /tmp/rviz_config.rviz; hero-rviz; cp -f /tmp/rviz_config.rviz ${TUE_ENV_WS_DIR}/src/hero_bringup/parameters/tools/rviz_config.rviz"
 Name=HERO-rviz
 GenericName=Open rviz with hero config
 X-KDE-StartupNotify=true
