--- a/ros-cucr_worlds_office/install.yaml
+++ b/ros-cucr_worlds_office/install.yaml
@@ -1,5 +1,12 @@
 - type: ros
-  source:
+  humble:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/cucr_worlds.git
+      sub-dir: cucr_worlds_office
+      version: humble
+  default:
+    source:
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_worlds.git
       sub-dir: cucr_worlds_office
