[robot-demo-user] depend on git-ps1

--- a/robot-demo-user/install.yaml
+++ b/robot-demo-user/install.yaml
@@ -9,6 +9,9 @@
 - type: system
   name: htop
 
+- type: target
+  name: git-ps1
+
 # Tele-operation
 - type: target
   name: ros-tue_teleop_keyboard
