--- a/ros-test_reachy_common_bringup/install.yaml
+++ b/ros-test_reachy_common_bringup/install.yaml
@@ -1,7 +1,13 @@
 - type: ros
   humble:
-   source:
+    source:
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_robots_tests.git
       sub-dir: tests_reachy/test_reachy_common_bringup
-
+      version: humble
+  default:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/cucr_robots_tests.git
+      sub-dir: tests_reachy/test_reachy_common_bringup
+      version: humble
