--- a/ros-test_reachy_desktop_bringup/install.yaml
+++ b/ros-test_reachy_desktop_bringup/install.yaml
@@ -4,4 +4,10 @@
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/cucr_robots_tests.git
       sub-dir: tests_reachy/test_reachy_desktop_bringup
-
+      version: humble
+  default:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/cucr_robots_tests.git
+      sub-dir: tests_reachy/test_reachy_desktop_bringup
+      version: humble
