chore: reachy targets

--- a/ros-rplidar_ros/install.yaml
+++ b/ros-rplidar_ros/install.yaml
@@ -11,6 +11,10 @@
     source:
       type: system
       name: rplidar-ros
+  humble:
+    source:
+      type: system
+      name: rplidar-ros
   noetic:
     source:
       type: git
