--- a/ros-smf_move_base_control/install.yaml
+++ b/ros-smf_move_base_control/install.yaml
@@ -5,6 +5,12 @@
       url: git@github.com:CardiffUniversityComputationalRobotics/social-multi-fed-nav-stack.git
       sub-dir: smf_move_base_control
       version: melodic-devel
+  humble:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/social-multi-fed-nav-stack.git
+      sub-dir: smf_move_base_control
+      version: humble-devel
   default:
     source:
       type: git
