--- a/ros-esc_move_base_planning/install.yaml
+++ b/ros-esc_move_base_planning/install.yaml
@@ -11,6 +11,12 @@
       url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
       version: melodic-devel
       sub-dir: esc_move_base_planning
+  humble:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/esc-nav-stack.git
+      version: humble-devel
+      sub-dir: esc_move_base_planning
   default:
     source:
       type: git
