robowflex is added

--- a/ros-robowflex_library/install.yaml
+++ b/ros-robowflex_library/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
       type: git
-      url: git@github.com:KavrakiLab/robowflex.git
+      url: git@github.com:CardiffUniversityComputationalRobotics/robowflex.git
       sub-dir: robowflex_library
+      version: master-franka-agr
