--- a/ros-robowflex_resources/install.yaml
+++ b/ros-robowflex_resources/install.yaml
@@ -1,4 +1,7 @@
 - type: ros
   source:
       type: git
-      url: git@github.com:KavrakiLab/robowflex_resources.git
+      url: git@github.com:CardiffUniversityComputationalRobotics/robowflex_resources.git
+      version: master-franka-dev
+
+      
