robowflex is added

--- a/ros-robowflex_library/install.yaml
+++ b/ros-robowflex_library/install.yaml
@@ -3,4 +3,4 @@
       type: git
       url: git@github.com:CardiffUniversityComputationalRobotics/robowflex.git
       sub-dir: robowflex_library
-      version: master-franka-agr
+      version: master-gmp
