chore: ros2 mig

--- a/ros-cadrl_ros/install.yaml
+++ b/ros-cadrl_ros/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
-    type: git
-    url: git@github.com:CardiffUniversityComputationalRobotics/cadrl_ros.git
+  humble:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/cadrl_ros.git
+      version: humble-devel
+  default:
+    source:
+      type: git
+      url: git@github.com:CardiffUniversityComputationalRobotics/cadrl_ros.git
